Return displayname on connect.